[gd_scene load_steps=19 format=4 uid="uid://bsihlmawq5jbq"]

[ext_resource type="Script" path="res://scripts/Levels/lab-escape.gd" id="1_r6deh"]
[ext_resource type="PackedScene" uid="uid://c2mmmw150y6yj" path="res://scenes/objects/lab_cell.tscn" id="3_hrlo7"]
[ext_resource type="Texture2D" uid="uid://ctijq3u5aqe1v" path="res://assets/Tiles/oldTiles/lab_tiles.png" id="4_mi8k0"]
[ext_resource type="PackedScene" uid="uid://cyxa25yg2hfwc" path="res://scenes/objects/button.tscn" id="5_7nrcb"]
[ext_resource type="PackedScene" uid="uid://q5myivnq8cna" path="res://scenes/objects/key_card.tscn" id="7_85sb4"]
[ext_resource type="Texture2D" uid="uid://bpcg7s8xatixv" path="res://Art/OldTestArt/spike.png" id="7_modnx"]
[ext_resource type="PackedScene" uid="uid://dbh40ehfj6b7n" path="res://scenes/objects/lab_exit_door.tscn" id="8_fg2n0"]
[ext_resource type="Texture2D" uid="uid://dh3qpgv5wov8e" path="res://Art/OldTestArt/metal.png" id="8_hrlo7"]
[ext_resource type="Texture2D" uid="uid://dt43xyrsdyk8s" path="res://Art/OldTestArt/crate.png" id="9_mi8k0"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_max5s"]
texture = ExtResource("4_mi8k0")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_lnb5p"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_max5s")

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_rxhor"]
properties/0/path = NodePath("Crate:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("Crate:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Crate:linear_velocity")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("Crate:angular_velocity")
properties/3/spawn = true
properties/3/replication_mode = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7nrcb"]
size = Vector2(160, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_85sb4"]
size = Vector2(56, 55)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_modnx"]
size = Vector2(160, 63)

[sub_resource type="Animation" id="Animation_mi8k0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1714, 815)]
}

[sub_resource type="Animation" id="Animation_hrlo7"]
resource_name = "drop"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1714, 815), Vector2(1714, 875)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7nrcb"]
_data = {
&"RESET": SubResource("Animation_mi8k0"),
&"drop": SubResource("Animation_hrlo7")
}

[node name="LabEscape" type="Node2D"]
script = ExtResource("1_r6deh")

[node name="pSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://bxpry3684affg")
spawn_path = NodePath("../Players")

[node name="PlayerMarkers" type="Node2D" parent="."]
position = Vector2(1, 8)

[node name="Player1Marker" type="Marker2D" parent="PlayerMarkers"]
position = Vector2(330, 425)

[node name="Player2Marker" type="Marker2D" parent="PlayerMarkers"]
position = Vector2(504, 429)

[node name="Players" type="Node2D" parent="."]

[node name="LabCell2" parent="." instance=ExtResource("3_hrlo7")]
position = Vector2(306, 204)

[node name="ColorRect" parent="LabCell2/LeftWall" index="1"]
scale = Vector2(0.995916, 1.01589)

[node name="CellFloor" parent="LabCell2" index="3" groups=["cell_floor"]]

[node name="LabCell1" parent="." instance=ExtResource("3_hrlo7")]
position = Vector2(135, 204)

[node name="CellFloor" parent="LabCell1" index="3" groups=["cell_floor"]]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(7, 3)
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAABABkAAAAAAAIAAAACABkAAAAAAAMAAAADABkAAAAAAAMAAAAEABkAAAAAAAMAAAAFABkAAAAAAAMAAAAGABkAAAAAAAMAAAAHABkAAAAAAAMAAAAIABkAAAAAAAMAAAAJABkAAAAAAAMAAAAKABkAAAAAAAMAAAALABkAAAAAAAMAAAAMABkAAAAAAAMAAAANABkAAAAAAAMAAAAOABkAAAAAAAMAAAAPABkAAAAAAAMAAAAQABkAAAAAAAMAAAARABkAAAAAAAMAAAASABkAAAAAAAMAAAATABkAAAAAAAMAAAAUABkAAAAAAAMAAAAVABkAAAAAAAMAAAAWABkAAAAAAAMAAAAXABkAAAAAAAMAAAAYABkAAAAAAAMAAAAZABkAAAAAAAMAAAAaABkAAAAAAAMAAAAbABkAAAAAAAMAAAAcABkAAAAAAAMAAAAdABkAAAAAAAMAAAAeABkAAAAAAAMAAAAfABkAAAAAAAMAAAAgABkAAAAAAAMAAAAhABkAAAAAAAMAAAAiABkAAAAAAAMAAAAjABkAAAAAAAMAAAAkABkAAAAAAAMAAAAlABkAAAAAAAMAAAAmABkAAAAAAAMAAAAnABkAAAAAAAMAAAAoABkAAAAAAAMAAAApABkAAAAAAAMAAAAqABkAAAAAAAMAAAArABkAAAAAAAMAAAAsABkAAAAAAAMAAAAtABkAAAAAAAMAAAAuABkAAAAAAAMAAAAvABkAAAAAAAMAAAAwABkAAAAAAAMAAAAxABkAAAAAAAMAAAAyABkAAAAAAAMAAAAzABkAAAAAAAMAAAA0ABkAAAAAAAMAAAA6ABkAAAAAAAIAAAAAABoAAAAAAAIAAAAAABsAAAAAAAIAAAAAABwAAAAAAAIAAAAAAB0AAAAAAAIAAAAAAB4AAAAAAAIAAAAAAB8AAAAAAAIAAAAAACAAAAAAAAIAAAAAACEAAAAAAAIAAAAAACIAAAAAAAIAAAABABoAAAAAAAIAAAABABsAAAAAAAIAAAABABwAAAAAAAIAAAABAB0AAAAAAAIAAAABAB4AAAAAAAIAAAABAB8AAAAAAAIAAAABACAAAAAAAAIAAAABACEAAAAAAAIAAAABACIAAAAAAAIAAAACABoAAAAAAAIAAAACABsAAAAAAAIAAAACABwAAAAAAAIAAAACAB0AAAAAAAIAAAACAB4AAAAAAAIAAAACAB8AAAAAAAIAAAACACAAAAAAAAIAAAACACEAAAAAAAIAAAACACIAAAAAAAIAAAADABoAAAAAAAIAAAADABsAAAAAAAIAAAADABwAAAAAAAIAAAADAB0AAAAAAAIAAAADAB4AAAAAAAIAAAADAB8AAAAAAAIAAAADACAAAAAAAAIAAAADACEAAAAAAAIAAAADACIAAAAAAAIAAAAEABoAAAAAAAIAAAAEABsAAAAAAAIAAAAEABwAAAAAAAIAAAAEAB0AAAAAAAIAAAAEAB4AAAAAAAIAAAAEAB8AAAAAAAIAAAAEACAAAAAAAAIAAAAEACEAAAAAAAIAAAAEACIAAAAAAAIAAAAFABoAAAAAAAIAAAAFABsAAAAAAAIAAAAFABwAAAAAAAIAAAAFAB0AAAAAAAIAAAAFAB4AAAAAAAIAAAAFAB8AAAAAAAIAAAAFACAAAAAAAAIAAAAFACEAAAAAAAIAAAAFACIAAAAAAAIAAAAGABoAAAAAAAIAAAAGABsAAAAAAAIAAAAGABwAAAAAAAIAAAAGAB0AAAAAAAIAAAAGAB4AAAAAAAIAAAAGAB8AAAAAAAIAAAAGACAAAAAAAAIAAAAGACEAAAAAAAIAAAAGACIAAAAAAAIAAAAHABoAAAAAAAIAAAAHABsAAAAAAAIAAAAHABwAAAAAAAIAAAAHAB0AAAAAAAIAAAAHAB4AAAAAAAIAAAAHAB8AAAAAAAIAAAAHACAAAAAAAAIAAAAHACEAAAAAAAIAAAAHACIAAAAAAAIAAAAIABoAAAAAAAIAAAAIABsAAAAAAAIAAAAIABwAAAAAAAIAAAAIAB0AAAAAAAIAAAAIAB4AAAAAAAIAAAAIAB8AAAAAAAIAAAAIACAAAAAAAAIAAAAIACEAAAAAAAIAAAAIACIAAAAAAAIAAAAJABoAAAAAAAIAAAAJABsAAAAAAAIAAAAJABwAAAAAAAIAAAAJAB0AAAAAAAIAAAAJAB4AAAAAAAIAAAAJAB8AAAAAAAIAAAAJACAAAAAAAAIAAAAJACEAAAAAAAIAAAAJACIAAAAAAAIAAAAKABoAAAAAAAIAAAAKABsAAAAAAAIAAAAKABwAAAAAAAIAAAAKAB0AAAAAAAIAAAAKAB4AAAAAAAIAAAAKAB8AAAAAAAIAAAAKACAAAAAAAAIAAAAKACEAAAAAAAIAAAAKACIAAAAAAAIAAAALABoAAAAAAAIAAAALABsAAAAAAAIAAAALABwAAAAAAAIAAAALAB0AAAAAAAIAAAALAB4AAAAAAAIAAAALAB8AAAAAAAIAAAALACAAAAAAAAIAAAALACEAAAAAAAIAAAALACIAAAAAAAIAAAAMABoAAAAAAAIAAAAMABsAAAAAAAIAAAAMABwAAAAAAAIAAAAMAB0AAAAAAAIAAAAMAB4AAAAAAAIAAAAMAB8AAAAAAAIAAAAMACAAAAAAAAIAAAAMACEAAAAAAAIAAAAMACIAAAAAAAIAAAANABoAAAAAAAIAAAANABsAAAAAAAIAAAANABwAAAAAAAIAAAANAB0AAAAAAAIAAAANAB4AAAAAAAIAAAANAB8AAAAAAAIAAAANACAAAAAAAAIAAAANACEAAAAAAAIAAAANACIAAAAAAAIAAAAOABoAAAAAAAIAAAAOABsAAAAAAAIAAAAOABwAAAAAAAIAAAAOAB0AAAAAAAIAAAAOAB4AAAAAAAIAAAAOAB8AAAAAAAIAAAAOACAAAAAAAAIAAAAOACEAAAAAAAIAAAAOACIAAAAAAAIAAAAPABoAAAAAAAIAAAAPABsAAAAAAAIAAAAPABwAAAAAAAIAAAAPAB0AAAAAAAIAAAAPAB4AAAAAAAIAAAAPAB8AAAAAAAIAAAAPACAAAAAAAAIAAAAPACEAAAAAAAIAAAAPACIAAAAAAAIAAAAQABoAAAAAAAIAAAAQABsAAAAAAAIAAAAQABwAAAAAAAIAAAAQAB0AAAAAAAIAAAAQAB4AAAAAAAIAAAAQAB8AAAAAAAIAAAAQACAAAAAAAAIAAAAQACEAAAAAAAIAAAAQACIAAAAAAAIAAAARABoAAAAAAAIAAAARABsAAAAAAAIAAAARABwAAAAAAAIAAAARAB0AAAAAAAIAAAARAB4AAAAAAAIAAAARAB8AAAAAAAIAAAARACAAAAAAAAIAAAARACEAAAAAAAIAAAARACIAAAAAAAIAAAASABoAAAAAAAIAAAASABsAAAAAAAIAAAASABwAAAAAAAIAAAASAB0AAAAAAAIAAAASAB4AAAAAAAIAAAASAB8AAAAAAAIAAAASACAAAAAAAAIAAAASACEAAAAAAAIAAAASACIAAAAAAAIAAAATABoAAAAAAAIAAAATABsAAAAAAAIAAAATABwAAAAAAAIAAAATAB0AAAAAAAIAAAATAB4AAAAAAAIAAAATAB8AAAAAAAIAAAATACAAAAAAAAIAAAATACEAAAAAAAIAAAATACIAAAAAAAIAAAAUABoAAAAAAAIAAAAUABsAAAAAAAIAAAAUABwAAAAAAAIAAAAUAB0AAAAAAAIAAAAUAB4AAAAAAAIAAAAUAB8AAAAAAAIAAAAUACAAAAAAAAIAAAAUACEAAAAAAAIAAAAUACIAAAAAAAIAAAAVABoAAAAAAAIAAAAVABsAAAAAAAIAAAAVABwAAAAAAAIAAAAVAB0AAAAAAAIAAAAVAB4AAAAAAAIAAAAVAB8AAAAAAAIAAAAVACAAAAAAAAIAAAAVACEAAAAAAAIAAAAVACIAAAAAAAIAAAAWABoAAAAAAAIAAAAWABsAAAAAAAIAAAAWABwAAAAAAAIAAAAWAB0AAAAAAAIAAAAWAB4AAAAAAAIAAAAWAB8AAAAAAAIAAAAWACAAAAAAAAIAAAAWACEAAAAAAAIAAAAWACIAAAAAAAIAAAAXABoAAAAAAAIAAAAXABsAAAAAAAIAAAAXABwAAAAAAAIAAAAXAB0AAAAAAAIAAAAXAB4AAAAAAAIAAAAXAB8AAAAAAAIAAAAXACAAAAAAAAIAAAAXACEAAAAAAAIAAAAXACIAAAAAAAIAAAAYABoAAAAAAAIAAAAYABsAAAAAAAIAAAAYABwAAAAAAAIAAAAYAB0AAAAAAAIAAAAYAB4AAAAAAAIAAAAYAB8AAAAAAAIAAAAYACAAAAAAAAIAAAAYACEAAAAAAAIAAAAYACIAAAAAAAIAAAAZABoAAAAAAAIAAAAZABsAAAAAAAIAAAAZABwAAAAAAAIAAAAZAB0AAAAAAAIAAAAZAB4AAAAAAAIAAAAZAB8AAAAAAAIAAAAZACAAAAAAAAIAAAAZACEAAAAAAAIAAAAZACIAAAAAAAIAAAAaABoAAAAAAAIAAAAaABsAAAAAAAIAAAAaABwAAAAAAAIAAAAaAB0AAAAAAAIAAAAaAB4AAAAAAAIAAAAaAB8AAAAAAAIAAAAaACAAAAAAAAIAAAAaACEAAAAAAAIAAAAaACIAAAAAAAIAAAAbABoAAAAAAAIAAAAbABsAAAAAAAIAAAAbABwAAAAAAAIAAAAbAB0AAAAAAAIAAAAbAB4AAAAAAAIAAAAbAB8AAAAAAAIAAAAbACAAAAAAAAIAAAAbACEAAAAAAAIAAAAbACIAAAAAAAIAAAAcABoAAAAAAAIAAAAcABsAAAAAAAIAAAAcABwAAAAAAAIAAAAcAB0AAAAAAAIAAAAcAB4AAAAAAAIAAAAcAB8AAAAAAAIAAAAcACAAAAAAAAIAAAAcACEAAAAAAAIAAAAcACIAAAAAAAIAAAAdABoAAAAAAAIAAAAdABsAAAAAAAIAAAAdABwAAAAAAAIAAAAdAB0AAAAAAAIAAAAdAB4AAAAAAAIAAAAdAB8AAAAAAAIAAAAdACAAAAAAAAIAAAAdACEAAAAAAAIAAAAdACIAAAAAAAIAAAAeABoAAAAAAAIAAAAeABsAAAAAAAIAAAAeABwAAAAAAAIAAAAeAB0AAAAAAAIAAAAeAB4AAAAAAAIAAAAeAB8AAAAAAAIAAAAeACAAAAAAAAIAAAAeACEAAAAAAAIAAAAeACIAAAAAAAIAAAAfABoAAAAAAAIAAAAfABsAAAAAAAIAAAAfABwAAAAAAAIAAAAfAB0AAAAAAAIAAAAfAB4AAAAAAAIAAAAfAB8AAAAAAAIAAAAfACAAAAAAAAIAAAAfACEAAAAAAAIAAAAfACIAAAAAAAIAAAAgABoAAAAAAAIAAAAgABsAAAAAAAIAAAAgABwAAAAAAAIAAAAgAB0AAAAAAAIAAAAgAB4AAAAAAAIAAAAgAB8AAAAAAAIAAAAgACAAAAAAAAIAAAAgACEAAAAAAAIAAAAgACIAAAAAAAIAAAAhABoAAAAAAAIAAAAhABsAAAAAAAIAAAAhABwAAAAAAAIAAAAhAB0AAAAAAAIAAAAhAB4AAAAAAAIAAAAhAB8AAAAAAAIAAAAhACAAAAAAAAIAAAAhACEAAAAAAAIAAAAhACIAAAAAAAIAAAAiABoAAAAAAAIAAAAiABsAAAAAAAIAAAAiABwAAAAAAAIAAAAiAB0AAAAAAAIAAAAiAB4AAAAAAAIAAAAiAB8AAAAAAAIAAAAiACAAAAAAAAIAAAAiACEAAAAAAAIAAAAiACIAAAAAAAIAAAAjABoAAAAAAAIAAAAjABsAAAAAAAIAAAAjABwAAAAAAAIAAAAjAB0AAAAAAAIAAAAjAB4AAAAAAAIAAAAjAB8AAAAAAAIAAAAjACAAAAAAAAIAAAAjACEAAAAAAAIAAAAjACIAAAAAAAIAAAAkABoAAAAAAAIAAAAkABsAAAAAAAIAAAAkABwAAAAAAAIAAAAkAB0AAAAAAAIAAAAkAB4AAAAAAAIAAAAkAB8AAAAAAAIAAAAkACAAAAAAAAIAAAAkACEAAAAAAAIAAAAkACIAAAAAAAIAAAAlABoAAAAAAAIAAAAlABsAAAAAAAIAAAAlABwAAAAAAAIAAAAlAB0AAAAAAAIAAAAlAB4AAAAAAAIAAAAlAB8AAAAAAAIAAAAlACAAAAAAAAIAAAAlACEAAAAAAAIAAAAlACIAAAAAAAIAAAAmABoAAAAAAAIAAAAmABsAAAAAAAIAAAAmABwAAAAAAAIAAAAmAB0AAAAAAAIAAAAmAB4AAAAAAAIAAAAmAB8AAAAAAAIAAAAmACAAAAAAAAIAAAAmACEAAAAAAAIAAAAmACIAAAAAAAIAAAAnABoAAAAAAAIAAAAnABsAAAAAAAIAAAAnABwAAAAAAAIAAAAnAB0AAAAAAAIAAAAnAB4AAAAAAAIAAAAnAB8AAAAAAAIAAAAnACAAAAAAAAIAAAAnACEAAAAAAAIAAAAnACIAAAAAAAIAAAAoABoAAAAAAAIAAAAoABsAAAAAAAIAAAAoABwAAAAAAAIAAAAoAB0AAAAAAAIAAAAoAB4AAAAAAAIAAAAoAB8AAAAAAAIAAAAoACAAAAAAAAIAAAAoACEAAAAAAAIAAAAoACIAAAAAAAIAAAApABoAAAAAAAIAAAApABsAAAAAAAIAAAApABwAAAAAAAIAAAApAB0AAAAAAAIAAAApAB4AAAAAAAIAAAApAB8AAAAAAAIAAAApACAAAAAAAAIAAAApACEAAAAAAAIAAAApACIAAAAAAAIAAAAqABoAAAAAAAIAAAAqABsAAAAAAAIAAAAqABwAAAAAAAIAAAAqAB0AAAAAAAIAAAAqAB4AAAAAAAIAAAAqAB8AAAAAAAIAAAAqACAAAAAAAAIAAAAqACEAAAAAAAIAAAAqACIAAAAAAAIAAAArABoAAAAAAAIAAAArABsAAAAAAAIAAAArABwAAAAAAAIAAAArAB0AAAAAAAIAAAArAB4AAAAAAAIAAAArAB8AAAAAAAIAAAArACAAAAAAAAIAAAArACEAAAAAAAIAAAArACIAAAAAAAIAAAAsABoAAAAAAAIAAAAsABsAAAAAAAIAAAAsABwAAAAAAAIAAAAsAB0AAAAAAAIAAAAsAB4AAAAAAAIAAAAsAB8AAAAAAAIAAAAsACAAAAAAAAIAAAAsACEAAAAAAAIAAAAsACIAAAAAAAIAAAAtABoAAAAAAAIAAAAtABsAAAAAAAIAAAAtABwAAAAAAAIAAAAtAB0AAAAAAAIAAAAtAB4AAAAAAAIAAAAtAB8AAAAAAAIAAAAtACAAAAAAAAIAAAAtACEAAAAAAAIAAAAtACIAAAAAAAIAAAAuABoAAAAAAAIAAAAuABsAAAAAAAIAAAAuABwAAAAAAAIAAAAuAB0AAAAAAAIAAAAuAB4AAAAAAAIAAAAuAB8AAAAAAAIAAAAuACAAAAAAAAIAAAAuACEAAAAAAAIAAAAuACIAAAAAAAIAAAAvABoAAAAAAAIAAAAvABsAAAAAAAIAAAAvABwAAAAAAAIAAAAvAB0AAAAAAAIAAAAvAB4AAAAAAAIAAAAvAB8AAAAAAAIAAAAvACAAAAAAAAIAAAAvACEAAAAAAAIAAAAvACIAAAAAAAIAAAAwABoAAAAAAAIAAAAwABsAAAAAAAIAAAAwABwAAAAAAAIAAAAwAB0AAAAAAAIAAAAwAB4AAAAAAAIAAAAwAB8AAAAAAAIAAAAwACAAAAAAAAIAAAAwACEAAAAAAAIAAAAwACIAAAAAAAIAAAAxABoAAAAAAAIAAAAxABsAAAAAAAIAAAAxABwAAAAAAAIAAAAxAB0AAAAAAAIAAAAxAB4AAAAAAAIAAAAxAB8AAAAAAAIAAAAxACAAAAAAAAIAAAAxACEAAAAAAAIAAAAxACIAAAAAAAIAAAAyABoAAAAAAAIAAAAyABsAAAAAAAIAAAAyABwAAAAAAAIAAAAyAB0AAAAAAAIAAAAyAB4AAAAAAAIAAAAyAB8AAAAAAAIAAAAyACAAAAAAAAIAAAAyACEAAAAAAAIAAAAyACIAAAAAAAIAAAAzABoAAAAAAAIAAAAzABsAAAAAAAIAAAAzABwAAAAAAAIAAAAzAB0AAAAAAAIAAAAzAB4AAAAAAAIAAAAzAB8AAAAAAAIAAAAzACAAAAAAAAIAAAAzACEAAAAAAAIAAAAzACIAAAAAAAIAAAA0ABoAAAAAAAIAAAA0ABsAAAAAAAIAAAA0ABwAAAAAAAIAAAA0AB0AAAAAAAIAAAA0AB4AAAAAAAIAAAA0AB8AAAAAAAIAAAA0ACAAAAAAAAIAAAA0ACEAAAAAAAIAAAA0ACIAAAAAAAIAAAA1ABsAAAAAAAIAAAA1ABwAAAAAAAIAAAA1AB0AAAAAAAIAAAA1AB4AAAAAAAIAAAA1AB8AAAAAAAIAAAA1ACAAAAAAAAIAAAA1ACEAAAAAAAIAAAA1ACIAAAAAAAIAAAA2ABsAAAAAAAIAAAA2ABwAAAAAAAIAAAA2AB0AAAAAAAIAAAA2AB4AAAAAAAIAAAA2AB8AAAAAAAIAAAA2ACAAAAAAAAIAAAA2ACEAAAAAAAIAAAA2ACIAAAAAAAIAAAA3ABsAAAAAAAIAAAA3ABwAAAAAAAIAAAA3AB0AAAAAAAIAAAA3AB4AAAAAAAIAAAA3AB8AAAAAAAIAAAA3ACAAAAAAAAIAAAA3ACEAAAAAAAIAAAA3ACIAAAAAAAIAAAA4ABsAAAAAAAIAAAA4ABwAAAAAAAIAAAA4AB0AAAAAAAIAAAA4AB4AAAAAAAIAAAA4AB8AAAAAAAIAAAA4ACAAAAAAAAIAAAA4ACEAAAAAAAIAAAA4ACIAAAAAAAIAAAA5ABsAAAAAAAIAAAA5ABwAAAAAAAIAAAA5AB0AAAAAAAIAAAA5AB4AAAAAAAIAAAA5AB8AAAAAAAIAAAA5ACAAAAAAAAIAAAA5ACEAAAAAAAIAAAA5ACIAAAAAAAIAAAA6ABoAAAAAAAIAAAA6ABsAAAAAAAIAAAA6ABwAAAAAAAIAAAA6AB0AAAAAAAIAAAA6AB4AAAAAAAIAAAA6AB8AAAAAAAIAAAA6ACAAAAAAAAIAAAA6ACEAAAAAAAIAAAA6ACIAAAAAAAIAAAA7AB8AAAAAAAIAAAA7ACAAAAAAAAIAAAA7ACEAAAAAAAIAAAA7ACIAAAAAAAIAAAD//xoAAAAAAAIAAAD//xsAAAAAAAIAAAD//xwAAAAAAAIAAAD//x0AAAAAAAIAAAD//x4AAAAAAAIAAAD//x8AAAAAAAIAAAD//yAAAAAAAAIAAAD//yEAAAAAAAIAAAD//yIAAAAAAAIAAAA8AB8AAAAAAAIAAAA8ACAAAAAAAAIAAAA8ACEAAAAAAAIAAAA8ACIAAAAAAAIAAAA9AB8AAAAAAAIAAAA9ACAAAAAAAAIAAAA9ACEAAAAAAAIAAAA9ACIAAAAAAAIAAAA+AB8AAAAAAAIAAAA+ACAAAAAAAAIAAAA+ACEAAAAAAAIAAAA+ACIAAAAAAAIAAAA/AB8AAAAAAAIAAAA/ACAAAAAAAAIAAAA/ACEAAAAAAAIAAAA/ACIAAAAAAAIAAAD8//z/AAAAAAIAAAD8//3/AAAAAAIAAAD8//7/AAAAAAIAAAD8////AAAAAAIAAAD8/wAAAAAAAAIAAAD8/wEAAAAAAAIAAAD8/wIAAAAAAAIAAAD8/wMAAAAAAAIAAAD8/wQAAAAAAAIAAAD8/wUAAAAAAAIAAAD8/wYAAAAAAAIAAAD8/wcAAAAAAAIAAAD8/wgAAAAAAAIAAAD8/wkAAAAAAAIAAAD8/woAAAAAAAIAAAD8/wsAAAAAAAIAAAD8/wwAAAAAAAIAAAD8/w0AAAAAAAIAAAD8/w4AAAAAAAIAAAD8/w8AAAAAAAIAAAD8/xAAAAAAAAIAAAD8/xEAAAAAAAIAAAD8/xIAAAAAAAIAAAD8/xMAAAAAAAIAAAD8/xQAAAAAAAIAAAD8/xUAAAAAAAIAAAD8/xYAAAAAAAIAAAD8/xcAAAAAAAIAAAD8/xgAAAAAAAIAAAD8/xkAAAAAAAIAAAD8/xoAAAAAAAIAAAD8/xsAAAAAAAIAAAD8/xwAAAAAAAIAAAD8/x0AAAAAAAIAAAD8/x4AAAAAAAIAAAD8/x8AAAAAAAIAAAD8/yAAAAAAAAIAAAD8/yEAAAAAAAIAAAD8/yIAAAAAAAIAAAD9//z/AAAAAAIAAAD9//3/AAAAAAIAAAD9//7/AAAAAAIAAAD9////AAAAAAIAAAD9/wAAAAAAAAIAAAD9/wEAAAAAAAIAAAD9/wIAAAAAAAIAAAD9/wMAAAAAAAIAAAD9/wQAAAAAAAIAAAD9/wUAAAAAAAIAAAD9/wYAAAAAAAIAAAD9/wcAAAAAAAIAAAD9/wgAAAAAAAIAAAD9/wkAAAAAAAIAAAD9/woAAAAAAAIAAAD9/wsAAAAAAAIAAAD9/wwAAAAAAAIAAAD9/w0AAAAAAAIAAAD9/w4AAAAAAAIAAAD9/w8AAAAAAAIAAAD9/xAAAAAAAAIAAAD9/xEAAAAAAAIAAAD9/xIAAAAAAAIAAAD9/xMAAAAAAAIAAAD9/xQAAAAAAAIAAAD9/xUAAAAAAAIAAAD9/xYAAAAAAAIAAAD9/xcAAAAAAAIAAAD9/xgAAAAAAAIAAAD9/xkAAAAAAAIAAAD9/xoAAAAAAAIAAAD9/xsAAAAAAAIAAAD9/xwAAAAAAAIAAAD9/x0AAAAAAAIAAAD9/x4AAAAAAAIAAAD9/x8AAAAAAAIAAAD9/yAAAAAAAAIAAAD9/yEAAAAAAAIAAAD9/yIAAAAAAAIAAAD+/xoAAAAAAAIAAAD+/xsAAAAAAAIAAAD+/xwAAAAAAAIAAAD+/x0AAAAAAAIAAAD+/x4AAAAAAAIAAAD+/x8AAAAAAAIAAAD+/yAAAAAAAAIAAAD+/yEAAAAAAAIAAAD+/yIAAAAAAAIAAAABAPz/AAABAAMAAAABAP3/AAABAAMAAAABAP7/AAABAAMAAAABAP//AAABAAMAAAABAAAAAAABAAMAAAABAAEAAAABAAMAAAABAAIAAAABAAMAAAABAAMAAAABAAMAAAABAAQAAAABAAMAAAABAAYAAAABAAMAAAABAAcAAAABAAMAAAABAAgAAAABAAMAAAABAAkAAAABAAMAAAABAAoAAAABAAMAAAABAAsAAAABAAMAAAABAAwAAAABAAMAAAABAA0AAAABAAMAAAABAA4AAAABAAMAAAABAA8AAAABAAMAAAABABAAAAABAAMAAAABABEAAAABAAMAAAABABIAAAABAAMAAAABABMAAAABAAMAAAABABQAAAABAAMAAAABABUAAAABAAMAAAABABYAAAABAAMAAAABABcAAAABAAMAAAABABgAAAABAAMAAAD+//z/AAAAAAIAAAD+//3/AAAAAAIAAAD+//7/AAAAAAIAAAD+////AAAAAAIAAAD+/wAAAAAAAAIAAAD+/wEAAAAAAAIAAAD+/wIAAAAAAAIAAAD+/wMAAAAAAAIAAAD+/wQAAAAAAAIAAAD+/wUAAAAAAAIAAAD+/wYAAAAAAAIAAAD+/wcAAAAAAAIAAAD+/wgAAAAAAAIAAAD+/wkAAAAAAAIAAAD+/woAAAAAAAIAAAD+/wsAAAAAAAIAAAD+/wwAAAAAAAIAAAD+/w0AAAAAAAIAAAD+/w4AAAAAAAIAAAD+/w8AAAAAAAIAAAD+/xAAAAAAAAIAAAD+/xEAAAAAAAIAAAD+/xIAAAAAAAIAAAD+/xMAAAAAAAIAAAD+/xQAAAAAAAIAAAD+/xUAAAAAAAIAAAD+/xYAAAAAAAIAAAD+/xcAAAAAAAIAAAD+/xgAAAAAAAIAAAD+/xkAAAAAAAIAAAD///z/AAAAAAIAAAD///3/AAAAAAIAAAD///7/AAAAAAIAAAD/////AAAAAAIAAAD//wAAAAAAAAIAAAD//wEAAAAAAAIAAAD//wIAAAAAAAIAAAD//wMAAAAAAAIAAAD//wQAAAAAAAIAAAD//wUAAAAAAAIAAAD//wYAAAAAAAIAAAD//wcAAAAAAAIAAAD//wgAAAAAAAIAAAD//wkAAAAAAAIAAAD//woAAAAAAAIAAAD//wsAAAAAAAIAAAD//wwAAAAAAAIAAAD//w0AAAAAAAIAAAD//w4AAAAAAAIAAAD//w8AAAAAAAIAAAD//xAAAAAAAAIAAAD//xEAAAAAAAIAAAD//xIAAAAAAAIAAAD//xMAAAAAAAIAAAD//xQAAAAAAAIAAAD//xUAAAAAAAIAAAD//xYAAAAAAAIAAAD//xcAAAAAAAIAAAD//xgAAAAAAAIAAAD//xkAAAAAAAIAAAAAAPz/AAAAAAIAAAAAAP3/AAAAAAIAAAAAAP7/AAAAAAIAAAAAAP//AAAAAAIAAAAAAAAAAAAAAAIAAAAAAAEAAAAAAAIAAAAAAAIAAAAAAAIAAAAAAAMAAAAAAAIAAAAAAAQAAAAAAAIAAAAAAAUAAAAAAAIAAAAAAAYAAAAAAAIAAAAAAAcAAAAAAAIAAAAAAAgAAAAAAAIAAAAAAAkAAAAAAAIAAAAAAAoAAAAAAAIAAAAAAAsAAAAAAAIAAAAAAAwAAAAAAAIAAAAAAA0AAAAAAAIAAAAAAA4AAAAAAAIAAAAAAA8AAAAAAAIAAAAAABAAAAAAAAIAAAAAABEAAAAAAAIAAAAAABIAAAAAAAIAAAAAABMAAAAAAAIAAAAAABQAAAAAAAIAAAAAABUAAAAAAAIAAAAAABYAAAAAAAIAAAAAABcAAAAAAAIAAAAAABgAAAAAAAIAAAAAABkAAAAAAAIAAAA6AAAAAAABAAIAAAA6AAEAAAABAAIAAAA6AAIAAAABAAIAAAA6AAMAAAABAAIAAAA6AAQAAAABAAIAAAA6AAUAAAABAAIAAAA6AAYAAAABAAIAAAA6AAcAAAABAAIAAAA6AAgAAAABAAIAAAA6AAkAAAABAAIAAAA6AAoAAAABAAIAAAA6AAsAAAABAAIAAAA6AAwAAAABAAIAAAA6AA0AAAABAAIAAAA6AA4AAAABAAIAAAA6AA8AAAABAAIAAAA6ABAAAAABAAIAAAA6ABEAAAABAAIAAAA6ABIAAAABAAIAAAA6ABMAAAABAAIAAAA6ABQAAAABAAIAAAA6ABUAAAABAAIAAAA6ABYAAAABAAIAAAA6ABcAAAABAAIAAAA6ABgAAAABAAIAAAA7APz/AAAAAAIAAAA7AP3/AAAAAAIAAAA7AP7/AAAAAAIAAAA7AP//AAAAAAIAAAA7AAAAAAAAAAIAAAA7AAEAAAAAAAIAAAA7AAIAAAAAAAIAAAA7AAMAAAAAAAIAAAA7AAQAAAAAAAIAAAA7AAUAAAAAAAIAAAA7AAYAAAAAAAIAAAA7AAcAAAAAAAIAAAA7AAgAAAAAAAIAAAA7AAkAAAAAAAIAAAA7AAoAAAAAAAIAAAA7AAsAAAAAAAIAAAA7AAwAAAAAAAIAAAA7AA0AAAAAAAIAAAA7AA4AAAAAAAIAAAA7AA8AAAAAAAIAAAA7ABAAAAAAAAIAAAA7ABEAAAAAAAIAAAA7ABIAAAAAAAIAAAA7ABMAAAAAAAIAAAA7ABQAAAAAAAIAAAA7ABUAAAAAAAIAAAA7ABYAAAAAAAIAAAA7ABcAAAAAAAIAAAA7ABgAAAAAAAIAAAA7ABkAAAAAAAIAAAA7ABoAAAAAAAIAAAA7ABsAAAAAAAIAAAA7ABwAAAAAAAIAAAA7AB0AAAAAAAIAAAA7AB4AAAAAAAIAAAA8APz/AAAAAAIAAAA8AP3/AAAAAAIAAAA8AP7/AAAAAAIAAAA8AP//AAAAAAIAAAA8AAAAAAAAAAIAAAA8AAEAAAAAAAIAAAA8AAIAAAAAAAIAAAA8AAMAAAAAAAIAAAA8AAQAAAAAAAIAAAA8AAUAAAAAAAIAAAA8AAYAAAAAAAIAAAA8AAcAAAAAAAIAAAA8AAgAAAAAAAIAAAA8AAkAAAAAAAIAAAA8AAoAAAAAAAIAAAA8AAsAAAAAAAIAAAA8AAwAAAAAAAIAAAA8AA0AAAAAAAIAAAA8AA4AAAAAAAIAAAA8AA8AAAAAAAIAAAA8ABAAAAAAAAIAAAA8ABEAAAAAAAIAAAA8ABIAAAAAAAIAAAA8ABMAAAAAAAIAAAA8ABQAAAAAAAIAAAA8ABUAAAAAAAIAAAA8ABYAAAAAAAIAAAA8ABcAAAAAAAIAAAA8ABgAAAAAAAIAAAA8ABkAAAAAAAIAAAA8ABoAAAAAAAIAAAA8ABsAAAAAAAIAAAA8ABwAAAAAAAIAAAA8AB0AAAAAAAIAAAA8AB4AAAAAAAIAAAA9APz/AAAAAAIAAAA9AP3/AAAAAAIAAAA9AP7/AAAAAAIAAAA9AP//AAAAAAIAAAA9AAAAAAAAAAIAAAA9AAEAAAAAAAIAAAA9AAIAAAAAAAIAAAA9AAMAAAAAAAIAAAA9AAQAAAAAAAIAAAA9AAUAAAAAAAIAAAA9AAYAAAAAAAIAAAA9AAcAAAAAAAIAAAA9AAgAAAAAAAIAAAA9AAkAAAAAAAIAAAA9AAoAAAAAAAIAAAA9AAsAAAAAAAIAAAA9AAwAAAAAAAIAAAA9AA0AAAAAAAIAAAA9AA4AAAAAAAIAAAA9AA8AAAAAAAIAAAA9ABAAAAAAAAIAAAA9ABEAAAAAAAIAAAA9ABIAAAAAAAIAAAA9ABMAAAAAAAIAAAA9ABQAAAAAAAIAAAA9ABUAAAAAAAIAAAA9ABYAAAAAAAIAAAA9ABcAAAAAAAIAAAA9ABgAAAAAAAIAAAA9ABkAAAAAAAIAAAA9ABoAAAAAAAIAAAA9ABsAAAAAAAIAAAA9ABwAAAAAAAIAAAA9AB0AAAAAAAIAAAA9AB4AAAAAAAIAAAA+APz/AAAAAAIAAAA+AP3/AAAAAAIAAAA+AP7/AAAAAAIAAAA+AP//AAAAAAIAAAA+AAAAAAAAAAIAAAA+AAEAAAAAAAIAAAA+AAIAAAAAAAIAAAA+AAMAAAAAAAIAAAA+AAQAAAAAAAIAAAA+AAUAAAAAAAIAAAA+AAYAAAAAAAIAAAA+AAcAAAAAAAIAAAA+AAgAAAAAAAIAAAA+AAkAAAAAAAIAAAA+AAoAAAAAAAIAAAA+AAsAAAAAAAIAAAA+AAwAAAAAAAIAAAA+AA0AAAAAAAIAAAA+AA4AAAAAAAIAAAA+AA8AAAAAAAIAAAA+ABAAAAAAAAIAAAA+ABEAAAAAAAIAAAA+ABIAAAAAAAIAAAA+ABMAAAAAAAIAAAA+ABQAAAAAAAIAAAA+ABUAAAAAAAIAAAA+ABYAAAAAAAIAAAA+ABcAAAAAAAIAAAA+ABgAAAAAAAIAAAA+ABkAAAAAAAIAAAA+ABoAAAAAAAIAAAA+ABsAAAAAAAIAAAA+ABwAAAAAAAIAAAA+AB0AAAAAAAIAAAA+AB4AAAAAAAIAAAA/APz/AAAAAAIAAAA/AP3/AAAAAAIAAAA/AP7/AAAAAAIAAAA/AP//AAAAAAIAAAA/AAAAAAAAAAIAAAA/AAEAAAAAAAIAAAA/AAIAAAAAAAIAAAA/AAMAAAAAAAIAAAA/AAQAAAAAAAIAAAA/AAUAAAAAAAIAAAA/AAYAAAAAAAIAAAA/AAcAAAAAAAIAAAA/AAgAAAAAAAIAAAA/AAkAAAAAAAIAAAA/AAoAAAAAAAIAAAA/AAsAAAAAAAIAAAA/AAwAAAAAAAIAAAA/AA0AAAAAAAIAAAA/AA4AAAAAAAIAAAA/AA8AAAAAAAIAAAA/ABAAAAAAAAIAAAA/ABEAAAAAAAIAAAA/ABIAAAAAAAIAAAA/ABMAAAAAAAIAAAA/ABQAAAAAAAIAAAA/ABUAAAAAAAIAAAA/ABYAAAAAAAIAAAA/ABcAAAAAAAIAAAA/ABgAAAAAAAIAAAA/ABkAAAAAAAIAAAA/ABoAAAAAAAIAAAA/ABsAAAAAAAIAAAA/ABwAAAAAAAIAAAA/AB0AAAAAAAIAAAA/AB4AAAAAAAIAAAA6APz/AAABAAIAAAA6AP3/AAABAAIAAAA6AP7/AAABAAIAAAA6AP//AAABAAIAAAABAAUAAAABAAMAAAAiABUAAAADAAEAAAAjABUAAAADAAEAAAAkABUAAAADAAEAAAAlABUAAAADAAEAAAAmABUAAAADAAEAAAAnABUAAAACAAIAAAAvABEAAAADAAEAAAAwABEAAAACAAIAAAAhABUAAAACAAEAAAAuABEAAAACAAEAAAA=")
tile_set = SubResource("TileSet_lnb5p")

[node name="Button" parent="." instance=ExtResource("5_7nrcb")]
position = Vector2(874, 806)

[node name="KeyCard" parent="." instance=ExtResource("7_85sb4")]
position = Vector2(1798, 484)

[node name="LabExitDoor" parent="." instance=ExtResource("8_fg2n0")]
z_index = -1
position = Vector2(1458, 741)
scale = Vector2(4.2281, 4.55587)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_rxhor")

[node name="Spikes" type="Area2D" parent="."]
position = Vector2(-9, 25)

[node name="Spike" type="Sprite2D" parent="Spikes"]
texture_filter = 1
position = Vector2(1846, 825)
scale = Vector2(3.3, 2.9)
texture = ExtResource("7_modnx")

[node name="Spike2" type="Sprite2D" parent="Spikes"]
texture_filter = 1
position = Vector2(1774, 825)
scale = Vector2(3.3, 2.9)
texture = ExtResource("7_modnx")

[node name="Spike3" type="Sprite2D" parent="Spikes"]
texture_filter = 1
position = Vector2(1810, 825)
scale = Vector2(3.3, 2.9)
texture = ExtResource("7_modnx")

[node name="Spike4" type="Sprite2D" parent="Spikes"]
texture_filter = 1
position = Vector2(1739, 825)
scale = Vector2(3.3, 2.9)
texture = ExtResource("7_modnx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spikes"]
position = Vector2(1792, 825.5)
shape = SubResource("RectangleShape2D_7nrcb")

[node name="Crate" type="RigidBody2D" parent="." groups=["crates"]]
position = Vector2(1186, 670)
gravity_scale = 0.5

[node name="Sprite2D" type="Sprite2D" parent="Crate"]
texture_filter = 1
position = Vector2(23, -22.5)
scale = Vector2(5.6, 5.5)
texture = ExtResource("9_mi8k0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Crate"]
position = Vector2(23, -22.5)
shape = SubResource("RectangleShape2D_85sb4")

[node name="TrapDoor" type="StaticBody2D" parent="."]
texture_filter = 1
position = Vector2(1714, 815)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrapDoor"]
position = Vector2(69, 20.5)
shape = SubResource("RectangleShape2D_modnx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TrapDoor"]
libraries = {
&"": SubResource("AnimationLibrary_7nrcb")
}

[node name="Sprite2D" type="Sprite2D" parent="TrapDoor"]
position = Vector2(69, 20)
scale = Vector2(16, 6.4)
texture = ExtResource("8_hrlo7")

[connection signal="body_entered" from="Spikes" to="." method="_on_spikes_body_entered"]

[editable path="LabCell2"]
[editable path="LabCell1"]
[editable path="Button"]
